# ChangeLog for net-libs/nss_ldap
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/nss_ldap/ChangeLog,v 1.28 2004/08/24 19:05:38 robbat2 Exp $

*nss_ldap-220 (24 Aug 2004)

  24 Aug 2004; Robin H. Johnson <robbat2@gentoo.org>
  +files/nss_ldap-220-db4.2-patch.diff, +nss_ldap-220.ebuild:
  Combine #61511 with my own work for the new version.

  08 Jun 2004; Nick Hadaway <raker@gentoo.org> nss_ldap-215-r1.ebuild,
  files/nsswitch.ldap.diff :
  adds a files lookup for hosts in /etc/nsswitch.ldap.
  Many people do not have proper dns entries for their Base DN.
  See bug #50830.  Not bumping this as there is no recompile required.

  06 Jun 2004; Guy Martin <gmsoft@gentoo.org> nss_ldap-215-r1.ebuild:
  Marked stable on hppa.

  27 May 2004; Jason Wever <weeve@gentoo.org> nss_ldap-215-r1.ebuild:
  Stable on sparc.

  28 Apr 2004; Nick Hadaway <raker@gentoo.org> nss_ldap-215-r1.ebuild:
  Marked stable for x86.

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> nss_ldap-215-r1.ebuild:
  Add inherit eutils

  30 Mar 2004; Lars Weiler <pylon@gentoo.org> nss_ldap-215-r1.ebuild:
  Masked ~ppc on user report

*nss_ldap-215-r1 (18 Mar 2004)

  18 Mar 2004; Nick Hadaway <raker@gentoo.org> nss_ldap-215-r1.ebuild,
  files/db4_1.85.diff:
  Your mileage probably did vary.  Loosening the dependancy was an
  appropriate change but did nothing for db4 people.  Thanks to
  Holger on bug #34717, we now have fixed .in files that appropriately
  search for db{4,4.1} stuff.

*nss_ldap-215 (29 Jan 2004)

  29 Jan 2004; Nick Hadaway <raker@gentoo.org> nss_ldap-215.ebuild:
  Removed stale configure options and comments.  Loosened the db 
  dependancy so non-db3 users and openldap-2.1 users who need db4 only
  work fine.  As always, YMMV. :)

  06 Nov 2003; Robin H. Johnson <robbat2@gentoo.org> nss_ldap-174-r2.ebuild,
  nss_ldap-202.ebuild, nss_ldap-207-r1.ebuild, nss_ldap-207.ebuild,