@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/nss_ldap
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/nss_ldap/ChangeLog,v 1.28 2004/08/24 19:05:38 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/nss_ldap/ChangeLog,v 1.29 2004/09/03 19:51:17 caleb Exp $
+
+  03 Sep 2004; Caleb Tennis <caleb@gentoo.org> -nss_ldap-209.1.ebuild:
+  Removing package masked version
 
 *nss_ldap-220 (24 Aug 2004)
 
